--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ verify_ssl = true
 boto3 = "*"
 boto3-stubs = {extras = ["essential"], version = "*"}
 jupyter = "*"
+stepfunctions = "*"
 
 [requires]
 python_version = "3.8"
